--- a/app/globals.css
+++ b/app/globals.css
@@ -3,20 +3,25 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+	--foreground-rgb: 0, 0, 0;
+	--background-start-rgb: 214, 219, 220;
+	--background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+	:root {
+		--foreground-rgb: 255, 255, 255;
+		--background-start-rgb: 0, 0, 0;
+		--background-end-rgb: 0, 0, 0;
+	}
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: #f3faff;
+	color: rgb(var(--foreground-rgb));
+	background: #f3faff;
+}
+
+.blue-gradient {
+	background-color: rgba(46, 133, 254, 1);
+	background-image: radial-gradient(circle, rgba(46, 133, 254, 1) 0%, rgba(113, 183, 253, 1) 100%);
 }
